--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -1,5 +1,8 @@
 name: "godot-ci export"
-on: push
+on:
+  push:
+    branches:
+      - main
 
 env:
   GODOT_VERSION: 4.2.2
@@ -13,7 +16,7 @@ jobs:
       image: docker://barichello/godot-ci:4.2.2
     steps:
       - name: Checkout
-        uses: actions/checkout
+        uses: actions/checkout@v2
       - name: Setup
         run: |
           mkdir -v -p build/web ~/.local/share/godot/templates
@@ -21,7 +24,7 @@ jobs:
       - name: Web Build
         run: godot -v --export "HTML5" ./build/web/index.html
       - name: Upload Artifact
-        uses: actions/upload-artifact
+        uses: actions/upload-artifact@v2
         with:
           name: web
           path: ./build/web/
