fix executable filename

--- a/.github/workflows/godot-build-itch-deploy.yml
+++ b/.github/workflows/godot-build-itch-deploy.yml
@@ -26,7 +26,7 @@ jobs:
           sudo apt-get install -y wget unzip
           wget -q -O godot.zip https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}/Godot_v${GODOT_VERSION}-stable_linux.x86_64.zip
           unzip -q godot.zip
-          mv Godot_v${GODOT_VERSION}-stable_linux_headless.64 godot
+          mv Godot_v${GODOT_VERSION}-stable_linux.x86_64 godot
           chmod +x godot
           sudo mv godot /usr/local/bin
           godot --version
