--- a/.github/workflows/godot-build-itch-deploy.yml
+++ b/.github/workflows/godot-build-itch-deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Get Godot
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip xorg xorg-driver-video
+            sudo apt-get install -y wget unzip xorg xorg-dev libglu1-mesa libglu1-mesa-dev
           wget -q -O godot.zip https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}/Godot_v${GODOT_VERSION}-stable_linux.x86_64.zip
           unzip -q godot.zip
           mv Godot_v${GODOT_VERSION}-stable_linux.x86_64 godot
