--- a/.github/workflows/godot-build-itch-deploy.yml
+++ b/.github/workflows/godot-build-itch-deploy.yml
@@ -1,50 +1,26 @@
-name: "Build a Godot project and export it to itch.io"
+name: "Export to itch.io after publishing a release"
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 
   workflow_dispatch:
 
-env:
-  GODOT_VERSION: 4.2.2
-  EXPORT_NAME: PSGJ15
-
 jobs:
-  build-and-export:
-    name: Build and Export
+  itch-export:
     runs-on: ubuntu-latest
     steps:
-      - name: Prepare directories
-        run: |
-          mkdir -p ~/.local/share/godot/templates/${GODOT_VERSION}.stable
-          mkdir -p build/web
-
-      - name: Get Godot
-        run: |
-          sudo apt-get update
-            sudo apt-get install -y wget unzip xorg xorg-dev libglu1-mesa libglu1-mesa-dev
-          wget -q -O godot.zip https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}/Godot_v${GODOT_VERSION}-stable_linux.x86_64.zip
-          unzip -q godot.zip
-          mv Godot_v${GODOT_VERSION}-stable_linux.x86_64 godot
-          chmod +x godot
-          sudo mv godot /usr/local/bin
-          godot --version
-
-      - name: Get Godot export templates
-        run: |
-          wget -q -O templates.zip https://downloads.tuxfamily.org/godotengine/${GODOT_VERSION}/Godot_v${GODOT_VERSION}-stable_export_templates.tpz
-          unzip -q templates.zip
-          mv templates ~/.local/share/godot/templates/${GODOT_VERSION}.stable
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Build
-        run: godot -v --rendering-driver opengl3 --export-release "Web" ./build/web/index.html
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: web
-          path: ./build/web/
+    - name: Get release zip
+      run: |
+        sudo apt update
+        sudo apt install -y curl
+        curl -L -o release.zip ${{ github.event.release.zipball_url }}
+        
+    - name: Export to itch
+      uses: manleydev/butler-publish-itchio-action@v1.0.3
+      env:
+        BUTLER_CREDENTIALS: ${{ secrets.ITCH_API_KEY }}
+        CHANNEL: web
+        ITCH_GAME: a-title-that-incorporates-neither-shadows-nor-alchemy
+        ITCH_USER: beyondredacted
+        PACKAGE: release.zip
+    
