--- a/.github/workflows/godot-build-itch-deploy.yml
+++ b/.github/workflows/godot-build-itch-deploy.yml
@@ -9,18 +9,17 @@ jobs:
   itch-export:
     runs-on: ubuntu-latest
     steps:
-    - name: Get release zip
-      run: |
-        sudo apt update
-        sudo apt install -y curl
-        curl -L -o release.zip ${{ github.event.release..assets[0].browser_download_url }}
-        
-    - name: Export to itch
-      uses: manleydev/butler-publish-itchio-action@v1.0.3
-      env:
-        BUTLER_CREDENTIALS: ${{ secrets.ITCH_API_KEY }}
-        CHANNEL: web
-        ITCH_GAME: a-title-that-incorporates-neither-shadows-nor-alchemy
-        ITCH_USER: beyondredacted
-        PACKAGE: release.zip
-    
+      - name: Get release zip
+        run: |
+          sudo apt update
+          sudo apt install -y curl
+          curl -L -o release.zip ${{ github.event.release.assets[0].browser_download_url }}
+
+      - name: Export to itch
+        uses: manleydev/butler-publish-itchio-action@v1.0.3
+        env:
+          BUTLER_CREDENTIALS: ${{ secrets.ITCH_API_KEY }}
+          CHANNEL: web
+          ITCH_GAME: a-title-that-incorporates-neither-shadows-nor-alchemy
+          ITCH_USER: beyondredacted
+          PACKAGE: release.zip
