--- a/.github/workflows/godot-build-itch-deploy.yml
+++ b/.github/workflows/godot-build-itch-deploy.yml
@@ -22,4 +22,4 @@ jobs:
           CHANNEL: web
           ITCH_GAME: a-title-that-incorporates-neither-shadows-nor-alchemy
           ITCH_USER: beyondredacted
-          PACKAGE: release.zip
+          PACKAGE: PSGJ15.zip
